# audio_pkg

./: .gitignore  CMakeLists.txt  package.xml
action/: AudioPlaybackAction.action
scripts/: vad_detector.py
src/: audio_client.cpp  audio_listener.cpp  audio_playback.cpp  audio_playback_server.cpp
